2003-12-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: Add phone to address, postal code and phone to
	place
	* src/AddrEdit.py: Add phone number
	* src/EditPlace.py: Add phone number and postal code
	* src/LocEdit.py: Add phone number and postal code
	* src/edit_person.glade: Add postal code fields
	* src/dialog.glade: Add postal code and phone fields
	* src/places.glade: Add postal code
	* src/WriteXML.py: Add support for new place and postal code fields
	* src/GrampsParser.py: Add support for new place and postal code fields
	
2003-12-08  Richard Bos  <radoeka@xs4all.nl>
	* configure.in: catch the SUSE usage of "gnome.gconf" instead of
	the standard "gconf"

2003-12-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/de: Add directory for German manual 
	translation to CVS.
	* doc/gramps-manual/de/Makefile.am, Makefile.in: Add to CVS.
	* doc/gramps-manual/de/*.xml, *.omf, figures/*.png: Add to CVS.
	* doc/gramps-manual/Makefile.am: Add de to the SUBDIR list.
	* configure.in: Add doc/gramps-manual/de/Makefile to AC_CONFIG_FILES.

	* doc/gramps-manual/ru: Add directory with russian manual 
	translation to CVS.
	* doc/gramps-manual/ru/Makefile.am, 
	doc/gramps-manual/ru/Makefile.in,
	doc/gramps-manual/ru/cmdline.xml,
	doc/gramps-manual/ru/custom.xml,
	doc/gramps-manual/ru/faq.xml,
	doc/gramps-manual/ru/filtref.xml,
	doc/gramps-manual/ru/getstart.xml,
	doc/gramps-manual/ru/gramps-manual.xml,
	doc/gramps-manual/ru/keybind.xml,
	doc/gramps-manual/ru/legal.xml,
	doc/gramps-manual/ru/mainwin.xml,
	doc/gramps-manual/ru/usage.xml,
	doc/gramps-manual/ru/gramps-manual-ru.omf
	doc/gramps-manual/ru/figures,
	doc/gramps-manual/ru/figures/*.png: Add to CVS.
	* doc/gramps-manual/Makefile.am: Add ru to the SUBDIR list.
	* configure.in: Add doc/gramps-manual/ru/Makefile to AC_CONFIG_FILES.
	
	* doc/gramps-manual/ru/gramps-manual.xml: Translation.
	* doc/gramps-manual/ru/getstart.xml: Translation.
